--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# application database
+/src/database/db.sqlite3
+
 # dependencies
 /node_modules
 /.pnp
